Finished LoginHandler, almost done with PaymentHandler